--- a/src/app.css
+++ b/src/app.css
@@ -13,11 +13,8 @@ html {
 
 body {
 	margin: 0;
+	padding: 0;
 	height: 100%;
-	/* Add safe area padding */
-    padding-top: env(safe-area-inset-top);
-    padding-left: env(safe-area-inset-left);
-    padding-right: env(safe-area-inset-right);
 	/* Ensure body takes up full height */
 	min-height: 100vh;
 	/* Prevent content from being hidden behind notch */
