--- a/src/app.css
+++ b/src/app.css
@@ -5,12 +5,15 @@
 	--sal: env(safe-area-inset-left);
 }
 
-html, body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    overflow: hidden;
-    position: fixed;
-    width: 100%;
-    touch-action: none; /* Prevents all touch gestures */
+html,
+body {
+	margin: 0;
+	padding: 0;
+	height: 100%;
+	max-height: 100%;
+	overflow: hidden;
+	position: fixed;
+	width: 100%;
+	touch-action: none;
+	overscroll-behavior: none;
 }
