--- a/src/app.css
+++ b/src/app.css
@@ -3,8 +3,8 @@
 /* Custom Tailwind Colours for Application */
 /* TODO: Let's decide on colours to add consistency. */
 @theme {
-	--color-primary: #f63b3b;
-	--color-secondary: #6b7280;
+	--color-primary: #00abff;
+	--color-secondary: #9fe2fb;
 	--color-background: #ffffff;
 	--color-surface: #f8fafc;
 	--color-accent: #10b981;
