Fixes and transparency look

--- a/src/lib/styles/theme.scss
+++ b/src/lib/styles/theme.scss
@@ -18,8 +18,8 @@
 	--color-text-inverse: #ffffff;
 
     // Light theme background colors
-    --bg-top-primary: #4785ff;
-    --bg-bottom-primary: #7b4aff;
+    --bg-top-primary: #7b4aff;
+    --bg-bottom-primary: #4785ff;
 }
 
 // Dark theme
