--- a/src/lib/styles/theme.scss
+++ b/src/lib/styles/theme.scss
@@ -24,20 +24,20 @@
 
 // Dark theme
 [data-theme='dark'] {
-	--color-primary: #60a5fa;
-	--color-secondary: #94a3b8;
-	--color-background: #0f172a;
-	--color-surface: #1e293b;
-	--color-accent: #a78bfa;
-	--color-success: #34d399;
-	--color-warning: #fbbf24;
-	--color-error: #f87171;
+    --color-primary: #6e543b;
+    --color-secondary: #d97706;
+    --color-background: #0f0e0a;
+    --color-surface: #1c1810;
+    --color-accent: #eab308;
+    --color-success: #22c55e;
+    --color-warning: #f59e0b;
+    --color-error: #ef4444;
 
-	--color-text-default: #ffffff;
-	--color-text-primary: #f1f5f9;
-	--color-text-secondary: #cbd5e1;
-	--color-text-muted: #94a3b8;
-	--color-text-inverse: #0b101e;
+    --color-text-default: #fef3c7;
+    --color-text-primary: #ffffff;
+    --color-text-secondary: #d97706;
+    --color-text-muted: #92400e;
+    --color-text-inverse: #451a03;
 
     --bg-top-primary: #ccbc0a;
     --bg-bottom-primary: #b8701d;
